--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - google font link
@@ -729,7 +729,7 @@ solving, and enhancing practical skills in web technologies.
   <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
 
   <!--
     - ionicon link
