Update image paths to use the 'images' directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/WhatsApp Image 2025-11-14 at 9.31.30 AM.jpeg" alt="Richard hanrick" width="80">
+          <img src="./images/WhatsApp Image 2025-11-14 at 9.31.30 AM.jpeg" alt="Richard hanrick" width="80">
         </figure>
 
         <div class="info-content">
@@ -581,7 +581,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Scholarsync.png" alt="Scholarsync" loading="lazy">
+                  <img src="./images/Scholarsync.png" alt="Scholarsync" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ScholarSync</h3>
@@ -599,7 +599,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/crud application.png" alt="orizon" loading="lazy">
+                  <img src="./images/crud application.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">CRUD Application</h3>
@@ -635,7 +635,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/glassmorphism.png" alt="Login Page" loading="lazy">
+                  <img src="./images/glassmorphism.png" alt="Login Page" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Login Page</h3>
@@ -653,7 +653,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/perfume webpage.png" alt="perfumewabpage" loading="lazy">
+                  <img src="./images/perfume webpage.png" alt="perfumewabpage" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Home Page</h3>
@@ -671,7 +671,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Screenshot 2025-02-17 213235.png" alt="metaspark" loading="lazy">
+                  <img src="./images/Screenshot 2025-02-17 213235.png" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Food Street</h3>
