--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -247,7 +247,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./images/icon-design.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -325,10 +325,10 @@ solving, and enhancing practical skills in web technologies.
 
             <div class="modal-img-wrapper">
               <figure class="modal-avatar-box">
-                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                <img src="./images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
               </figure>
 
-              <img src="./assets/images/icon-quote.svg" alt="quote icon">
+              <img src="./images/icon-quote.svg" alt="quote icon">
             </div>
 
             <div class="modal-content">
@@ -617,7 +617,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Charm Bazaar.png" alt="fundo" loading="lazy">
+                  <img src="./images/Charm Bazaar.png" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Charm Bazaar</h3>
