--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ solving, and enhancing practical skills in web technologies.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./images/Charm Bazaar.png" alt="fundo" loading="lazy">
+                  <img src="./images/Charm_Bazaar.png" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Charm Bazaar</h3>
