--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ solving, and enhancing practical skills in web technologies.
           <br>
           <a href="https://leetcode.com/u/Pavithira_17/" target="_blank">LeetCode Profile</a><br>
           <a href="https://www.hackerrank.com/profile/pavithirasri2005" target="_blank">HackerRank Profile</a><br>
-          <a href="https://www.hackerrank.com/profile/pavithirasri2005" target="_blank">Github Profile</a>
+          <a href="https://github.com/Pavi2704" target="_blank">Github Profile</a>
         </section>
 
       </article>
